Services Module can now be imported

--- a/Services/src/plugin.yml
+++ b/Services/src/plugin.yml
@@ -1,7 +1,7 @@
 name: Services
 version: 1.0
 author: SolomonRosemite
-main: de.services.main.Main
+main: de.services.main.MainService
 commands:
     setup:
     leave:
