Improvements and Bug Fixes

--- a/Services/src/plugin.yml
+++ b/Services/src/plugin.yml
@@ -1,4 +1,4 @@
 name: Services
 version: 1.0
 author: SolomonRosemite
-main: com.rosemtie.services.main.MainService
+main: com.rosemite.services.main.MainService
