--- a/SkyWars/src/plugin.yml
+++ b/SkyWars/src/plugin.yml
@@ -3,8 +3,5 @@ version: 1.0
 author: PoxhYT
 main: de.sw.main.Main
 commands:
-    setup:
-    leave:
     start:
-    test:
-    skywars:
+    build:
