--- a/CityBuildAddon/src/plugin.yml
+++ b/CityBuildAddon/src/plugin.yml
@@ -5,5 +5,8 @@ main: de.cba.main.Main
 commands:
    inv:
      description: Lade, oder speicher dein Inventar!
+   invsee:
+   tpa:
+   tpaccept:
 
 
