--- a/CityBuildAddon/src/plugin.yml
+++ b/CityBuildAddon/src/plugin.yml
@@ -4,9 +4,12 @@ author: PoxhYT
 main: de.cba.main.Main
 commands:
    inv:
-     description: Lade, oder speicher dein Inventar!
+     description: Lade, oder speicher dein Inventar.
    invsee:
-   tpa:
-   tpaccept:
+     description: Gucke das Inventar anderer Spieler an.
+   coins:
+     description: Zeigt die Coins von dir, und andere Spieler an.
+
+
 
 
