--- a/SkyWars/src/plugin.yml
+++ b/SkyWars/src/plugin.yml
@@ -5,7 +5,8 @@ main: de.sw.main.Main
 commands:
     start:
     build:
-    sw:
     create:
-    setmotd:
     location:
+    createBlock:
+    setup:
+    addItem:
