--- a/Services/src/plugin.yml
+++ b/Services/src/plugin.yml
@@ -1,4 +1,3 @@
 name: Services
 version: 1.0
-author: SolomonRosemite
-main: com.rosemite.services.main.MainService
+main: de.poxh.services.main.MainService
