--- a/ServerService/src/plugin.yml
+++ b/ServerService/src/plugin.yml
@@ -1,4 +1,4 @@
 name: ServerServices
 version: 1.0
 author: SolomonRosemite
-main: com.rosemite.services.main.ServerService
+main: com.rosemite.server.main.ServerService
