--- a/ServerServices/pom.xml
+++ b/ServerServices/pom.xml
@@ -75,5 +75,11 @@
             <type>javadoc</type>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.rosemite</groupId>
+            <artifactId>Models</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
